[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/WorldSpace/InteractableObject/Component/Mount/WeaponSystemMount/WeaponHardpoint.gd" type="Script" id=1]
[ext_resource path="res://Objects/WorldSpace/InteractableObject/Component/Mount/TriggerOutputMount.gd" type="Script" id=2]
[ext_resource path="res://Objects/WorldSpace/InteractableObject/Component/Mount/WeaponSystemMount/MunitionLoadingMount.gd" type="Script" id=3]
[ext_resource path="res://Objects/WorldSpace/InteractableObject/Component/Weapon/ProjectileWeapon.gd" type="Script" id=4]
[ext_resource path="res://Objects/WorldSpace/InteractableObject/Component/OutputSystem/TriggerOutputSystem.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/WorldSpace/InteractableObject/Component/Weapon/BulletChamber.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/WorldSpace/InteractableObject/Component/OutputSystem/WeaponsSystem/MunitionsLoadingSystem.tscn" type="PackedScene" id=7]

[node name="ProjectileWeapon" type="Node2D"]
script = ExtResource( 4 )

[node name="TriggerOutputMount" type="Node2D" parent="."]
script = ExtResource( 2 )
initial_output_mounts = [ NodePath("../BulletChamberMount") ]

[node name="TriggerOutputSystem" parent="TriggerOutputMount" instance=ExtResource( 5 )]
scale = Vector2( 0.994186, 1 )
trigger_setting = 1

[node name="BulletChamberMount" type="Node2D" parent="."]
position = Vector2( 0, -8 )
script = ExtResource( 1 )

[node name="BulletChamber" parent="BulletChamberMount" instance=ExtResource( 6 )]

[node name="MunitionsLoadingMount" type="Node2D" parent="."]
script = ExtResource( 3 )
initial_output_mounts = [ NodePath("../BulletChamberMount") ]

[node name="MunitionsLoadingSystem" parent="MunitionsLoadingMount" instance=ExtResource( 7 )]
